made css changes to show image correctly aligned to center

--- a/webroot/css/freegal_styles.css
+++ b/webroot/css/freegal_styles.css
@@ -52,6 +52,7 @@ form, fieldset{
 	width:270px;
 	height: 60px;
 	overflow:hidden;
+	text-align: center;
 }
 .visual .heading-public-library  img{
 	max-width: 260px;
